dev/dapr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dapr
  namespace: dapr
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dapr.dev.dolphin.top
      secretName: tls-secret
  rules:
    - host: dapr.dev.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dapr-dashboard
                port:
                  number: 8080
